fixing secondary color for contrast

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,7 +1,7 @@
 :root {
     --primary-color: #000080;
     /* Navy*/
-    --secondary-color: #0000FF;
+    --secondary-color: #000033;
     /* Blue*/
     --accent1-color: #B22222;
     /*Fire Brick*/
